Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9855

Pretty printing of std::unordered_map isn't pretty (while gdb one is)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 2.8.1
    • Qt Creator 2.8.0
    • Debugger
    • None
    • Archlinux
      GDB 7.6
    • I985745530d93e1c191442431a7a9449a1c4c059a

    Description

      In the debugger, looking in an std::unordered_map is ugly and basically useless because it shows the "real" content (buckets..etc..).

      However, if I debug directly with GDB 7.6 on my system (ArchLinux up-to-date), I get nice output (keys and values).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hjk hjk
            maattdd Matthieu D
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes